Support (nested!) block comments